--- a/src/index.html
+++ b/src/index.html
@@ -6,7 +6,7 @@
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <script src="https://kit.fontawesome.com/1baa4ceec0.js"></script>
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <link rel="icon" type="image/x-icon" href="assets/svg/MyWasteAppLogo.svg">
 </head>
 <body>
   <app-root></app-root>
